# regfmt

./: LICENSE  Makefile  NOTES.org  README-pypi.md  README.md  README.org  TODO.org  pyproject.toml  regfmt.py
.github/: README.org
regfmtlib/: CommandLineParser.py  Constants.py  DRCChecker.py  Endian.py  Field.py  InputLoadAndValidate.py  Register.py  SVGWriter.py  SVGgeometry.py  TopLevel.py  __init__.py  centeralignlayout.py  cssparser.py  cssstyles.py  schema.yaml  stairleftlayout.py  svggeometry.py  svgwriter.py
regfmtlib/tests/: test_endian.py
scripts/: devinit.sh  install.sh  regfmt
src/regfmt/: CommandLineParser.py  Constants.py  DRCChecker.py  Endian.py  Field.py  InputLoadAndValidate.py  Register.py  RegisterFormat.py  RegisterTemplate.py  TopLevel.py  __init__.py  centeralignlayout.py  cssparser.py  cssstyles.py  regfmt.py  requirements.txt  stairleftlayout.py  svggeometry.py  svgwriter.py
src/regfmt/tests/: __init__.py
tests/: Makefile  __init__.py  test_CommandLineParser.py  test_RegisterFormat.py  test_constants.py  test_endian.py  test_field.py  test_register.py  test_regression.py  testutils.py
tests/control/: README.org  template.css  template.yaml
tests/data/: README.org  clean.css  example_0001.yaml  example_0002.yaml  example_0003.yaml  float-for-int.yaml  github.css  main.css  missing-width.yaml  register-stair-left.yaml  register.yaml
